# starland.rs

./: .gitignore  .gitmodules  Cargo.nix  Cargo.toml  LICENSE.md  README.md  TODO.md  flake.nix  oldflake.nix  overrides.nix  shell.nix
src/: config.rs  drawing.rs  focus.rs  input_handler.rs  lib.rs  main.rs  render.rs  shell.rs  state.rs  udev.rs  winit.rs  x11.rs
src/starctl/: main.rs
src/xwayland/: mod.rs
